# micronaut-kapt-ksp

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  maven_install.json  maven_micronaut3_install.json  maven_micronaut4_install.json
helloworld/src/main/kotlin/brex/helloworld/: BUILD.bazel  Factory1.kt  Factory2.kt  Factory3.kt  Factory4.kt  Hello1.kt  Hello2.kt
helloworld/src/main/kotlin/example/helloworld/: BUILD.bazel  Factory1.kt  Factory2.kt  Factory3.kt  Factory4.kt  Hello1.kt  Hello2.kt
